--- a/Assets/Style.css
+++ b/Assets/Style.css
@@ -1,9 +1,10 @@
+/*#330033*/
 body{
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
     color: white;
     padding: 0%;
     margin: 0%;
-    background-color: #0b081d;
+    background-color: #270027;
 }
 ul{
     list-style: none;
@@ -16,13 +17,18 @@ ul{
     background-image: url("IMG/BG.svg");
     width: 26rem;
     height: 100%;
+    text-align: center;
+    border-right: #fff solid 0.1rem;
 }
 .Menu a{
     display: flex;
+    align-items: center;
     text-decoration: none;
     font-weight: bold;
     color: white;
-    text-align: center;
+}
+.Menu a svg{
+    margin-left: 2rem;
 }
 .Menu a:hover{
     color: #f5395f;
@@ -30,10 +36,48 @@ ul{
 .Menu svg{
     width: 3.2rem;
     height: 3.2rem;
-    fill: white;
+    fill: white;    
 }
 .Menu .Account{
     width: 12rem;
     height: 12rem;
+    transition: all 300ms ease-in-out;
+}
+.Menu .Account:hover{
+    transform: scale(0.9);
+}
+.Menu2{
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("IMG/BG.svg");
+    text-align: center;
+    width: 5rem;
+    height: 100%;
+    border-left: #fff solid 0.1rem;
+    left: 94%;
+}
+.Menu2 svg{
+    fill: white;
+}
+.Menu2 a{
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
+.Menu2 a:hover{
+    color: #f5395f;
+}
+.Menu2 svg{
+    width: 3.2rem;
+    height: 3.2rem;
+}
+.Menu2 ul{
+    display: flex;
+    flex-direction: column;
+}
+.Menu2 li{
+    margin-right: 2rem;
 }
 
