--- a/Assets/Style.css
+++ b/Assets/Style.css
@@ -2,9 +2,12 @@
 body{
     font-family:Arial, Helvetica, sans-serif;
     color: white;
+    background-color: #270027;
+}
+html{
     padding: 0%;
     margin: 0%;
-    background-color: #270027;
+    scroll-behavior: smooth;
 }
 ul{
     list-style: none;
@@ -27,7 +30,7 @@ ul{
     font-weight: bold;
     color: white;
 }
-.Menu a svg{
+.Menu ul a svg{
     margin-left: 2rem;
 }
 .Menu a:hover{
@@ -39,8 +42,13 @@ ul{
     fill: white;    
 }
 .Menu .Account{
+    display: block;
+}
+.Menu .Account svg{
     width: 12rem;
     height: 12rem;
+}
+.Menu .Account{
     transition: all 300ms ease-in-out;
 }
 .Menu .Account:hover{
@@ -81,3 +89,30 @@ ul{
     margin-right: 2rem;
 }
 
+.HtmlPB{
+    background-image: url("IMG/BG2.svg");
+    margin-left: 25.9rem;
+    margin-right: 4.5rem;
+    border: white solid 0.1rem;
+}
+.HtmlPB a svg{
+    width: 6.4rem;
+    height: 6.4rem;
+    fill: white;    
+}
+.HtmlPB a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
+.HtmlPB a{
+    transition: all 300ms ease-in-out;
+}
+.HtmlPB a:hover{
+    color: #f5395f;
+    transform: scale(0.9);
+}
